体检页归一：五个一模一样的 IssueDTO 收成一个，五个 analyseOne 拆开
奖池概率、奖项库存、奖池配置、彩票玩法、奖级规则五个体检页，各自带着
一个字段完全相同的 XxxIssueDTO（code/level/message + danger/warn 两个工厂），
一份内存分页 page()，以及一段 "DANGER".equals(i.getLevel()) 的计数。
抄五份的代价不在字数：DANGER 这个字符串到底有几处定义没人说得清，
而写错一个字母的后果是「永远数出 0 条严重告警」—— 页面一片绿，且不报错。

新增 solvela.base.stat.HealthIssue 替掉五个 DTO（JSON 结构不变），
判定收成 isDanger()/isWarn()，计数收成 countDanger()/countWarn()。
级别刻意留成 String 不改枚举：工程里的枚举走 @EnumSerialize 输出 value，
换成枚举等于悄悄改了接口契约。

SolvelaPageUtil 加 subList()，替掉五份内存分页。它与已有的 subListPage 的
区别是不组装 PageResult —— 这几个接口返回的是自带概览字段的结果对象。

五个 analyseOne 按「身份 -> 扫描 -> 校验 -> 计数」拆开：

  DrawPoolAnalysisService.analyseOne     203 -> 22 行，拆出 9 段
  LotteryConfigBoardService.analyseOne   114 -> 34 行，拆出 6 段
  LotteryPrizeAnalysisService.analyseOne 109 -> 26 行，拆出 8 段
  PrizePoolBoardService.analyseOne       108 -> 38 行，拆出 5 段
  PrizeItemStockService.analyseOne        94 -> 11 行，拆出 6 段

拆的过程中新增四个私有 record 承载「扫一遍才知道」的中间量：
PoolScan / SlotScan / PoolShape / IssueTally / RuleScan。它们替掉的是
在循环外声明、循环里改、循环后读的那五六个局部变量 —— 那种写法每加一个
指标就要在三个地方各改一次，而且没有任何东西提示你漏了哪一处。

顺带修掉的东西：

1. PrizePoolBoardService 每个奖池查两次 drawConfigService.getByPool()
   （顶上取重置周期一次、体检里再取一次）。一屏 10 个奖池就是 10 次重复查询。
   现在查一次传下去。

2. 期望赔付的取整口径写进了注释：逐坑取整再相加 ≠ 相加后再取整，
   而这个数是拿来估活动预算的。原来靠「累加变量用未取整值、DTO 用取整值」
   这个不写出来就看不见的约定维持，现在由 record 的字段注释挑明。

3. LotteryConfigBoardService 自带的第 8 份 toLong 删掉，改用 StatRow。

全量测试通过：admin 221 个用例（含 FunnelStatTest / LedgerStatTest 两组
统计 key 契约测试）全绿。

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>